--- a/backend/alns-deubnk-uselessfacts-quarkus-kotlin/pom.xml
+++ b/backend/alns-deubnk-uselessfacts-quarkus-kotlin/pom.xml
@@ -100,6 +100,11 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-junit5-mockito</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>io.rest-assured</groupId>
             <artifactId>rest-assured</artifactId>
             <scope>test</scope>
@@ -120,6 +125,33 @@
             <version>${kotlin.version}</version>
             <scope>test</scope>
         </dependency>
+        <!-- MockK for mocking -->
+        <dependency>
+            <groupId>io.mockk</groupId>
+            <artifactId>mockk</artifactId>
+            <version>1.13.7</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.mockk</groupId>
+            <artifactId>mockk-jvm</artifactId>
+            <version>1.13.7</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.quarkiverse.mockk</groupId>
+            <artifactId>quarkus-junit5-mockk</artifactId>
+            <version>3.0.0</version>
+            <scope>test</scope>
+        </dependency>
+
+        <!--
+        testCompile 'io.mockk:mockk:1.12.2'
+        testImplementation 'io.quarkiverse.mockk:quarkus-junit5-mockk:0.3.0' //Used in MainServiceIntTestsWithMockKExtension
+        testCompile 'org.skyscreamer:jsonassert:1.5.0'
+        testCompile 'org.assertj:assertj-core:3.22.0'
+        -->
+
     </dependencies>
 
     <build>
